# the_wall

./: LICENSE  README.md  pyproject.toml  test_input
the_wall/: asgi.py  settings.py  urls.py  wsgi.py
wall_calculator/: apps.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
